--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,8 @@
 spring.application.name=PPRO
+
+spring.datasource.driver-class-name=org.h2.Driver
+spring.datasource.url=jdbc:h2:mem:testdb
+spring.cassandra.username=sa
+spring.datasource.password=
+
+spring.jpa.hibernate.ddl-auto=create-drop
