added login and roles logic, //TODO: redirect loop !!!

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,3 +6,6 @@ spring.cassandra.username=sa
 spring.datasource.password=
 
 spring.jpa.hibernate.ddl-auto=create-drop
+spring.thymeleaf.cache=false
+logging.level.org.springframework.security=DEBUG
+
