Login fix + styling

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,3 +9,6 @@ spring.jpa.hibernate.ddl-auto=create-drop
 spring.thymeleaf.cache=false
 logging.level.org.springframework.security=DEBUG
 
+spring.web.resources.cache.cachecontrol.no-store=true
+
+
